added function to pagination

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
         <div class="list" id="movies-list"></div>
         <div id="pagination">
-            <button id="prevBtn" onclick="previousPage()">Previous</button>
-            <button id="nextBtn" onclick="nextPage()">Next</button>
+            <button id="prevBtn">Previous</button>
+            <button id="nextBtn">Next</button>
         </div>
     </div>
 
