Added page number

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="list" id="movies-list"></div>
         <div id="pagination">
             <button id="prevBtn">Previous</button>
+            <span id="pageNumber"></span>
             <button id="nextBtn">Next</button>
         </div>
     </div>
